@@ -41,7 +41,8 @@ celery_queue = celery
 [dbserver]
 # enable multi_user if you have a multiple user installation
 multi_user = false
-file = ~/db.sqlite3
+file = ~/oqdata/db.sqlite3
+log = ~/oqdata/dbserver.log
 host = localhost
 port = 1999
 authkey = changeme
