@@ -111,8 +111,9 @@ class DbServer(object):
             self.thread.join()
 
 
-def runserver(dbpathport=None, loglevel='WARN'):
-    logging.basicConfig(level=getattr(logging, loglevel))
+def runserver(dbpathport=None, loglevel='WARN', logfile=None):
+    logfile = logfile or DATABASE['LOG']
+    logging.basicConfig(level=getattr(logging, loglevel), filename=logfile)
     if dbpathport:  # assume a string of the form "dbpath:port"
         dbpath, port = dbpathport.split(':')
         addr = (DATABASE['HOST'], int(port))
@@ -125,6 +126,7 @@ def runserver(dbpathport=None, loglevel='WARN'):
 parser = sap.Parser(runserver)
 parser.arg('dbpathport', 'dbpath:port')
 parser.opt('loglevel', 'WARN or INFO')
+parser.opt('logfile', 'filename (log to stdout if None)', '-f')
 
 if __name__ == '__main__':
     parser.callfunc()
